--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -156,40 +156,42 @@
   .header {
     width: 100%; }
     .header .logo-social .header-left-icon {
-      text-align: center !important; }
-      .header .logo-social .header-left-icon .header-sidebar {
-        display: none; }
+      margin-top: 0 !important; }
     .header .logo-social .logo {
       margin-top: -35px; }
     .header .logo-social .header-right-icon {
       position: relative;
       bottom: 45px;
-      text-align: center !important; }
+      text-align: right !important; }
 
   .home-slider {
     width: 100%; }
-    .home-slider #main-slider img {
-      height: 370px; }
-    .home-slider #main-slider .slider-text-right span {
+    .home-slider img {
+      height: 180px; }
+    .home-slider .slider-text-right span {
       top: 215px;
       width: 100%;
       font-size: 18px; }
-    .home-slider #main-slider .slider-text-left span {
+    .home-slider .slider-text-left span {
       top: 215px;
       width: 100%;
       font-size: 18px; }
-    .home-slider #main-slider .owl-nav .owl-prev {
+    .home-slider .owl-nav .owl-prev {
       left: 20px;
       width: 45px;
       height: 45px;
       font-size: 25px;
       line-height: 35px; }
-    .home-slider #main-slider .owl-nav .owl-next {
+    .home-slider .owl-nav .owl-next {
       right: 20px;
       width: 45px;
       height: 45px;
       font-size: 25px;
       line-height: 35px; }
+    .home-slider .carousel-indicators {
+      display: none; }
+    .home-slider .carousel-control-prev, .home-slider .carousel-control-next {
+      display: none; }
 
   .blog-wrapper {
     width: 98%; }
@@ -217,15 +219,13 @@
   .header {
     width: 100%; }
     .header .logo-social .header-left-icon {
-      text-align: center !important; }
-      .header .logo-social .header-left-icon .header-sidebar {
-        display: none; }
+      margin-top: 0 !important; }
     .header .logo-social .logo {
       margin-top: -35px; }
     .header .logo-social .header-right-icon {
       position: relative;
       bottom: 45px;
-      text-align: center !important; }
+      text-align: right !important; }
 
   .home-slider {
     width: 100%; }
