--- a/css/theme.css
+++ b/css/theme.css
@@ -484,6 +484,8 @@ a {
         -ms-transition: all 0.6s ease;
         -o-transition: all 0.6s ease;
         transition: all 0.6s ease; }
+    .blog-wrapper .main-content .fancybox-container .fancybox-inner .fancybox-caption-wrap .fancybox-caption {
+      visibility: visible; }
   .blog-wrapper .side-content {
     position: sticky;
     top: 0; }
